<resources>
    <string name="app_name">Playlist Maker</string>

    <!-- Commands -->
    <string name="accept">Да</string>
    <string name="add_to_playlist">Добавить в плейлист"</string>
    <string name="cancellation">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="create">Создать</string>
    <string name="decline">Нет</string>
    <string name="edit">Редактировать</string>
    <string name="refresh">Обновить</string>
    <string name="save">Сохранить</string>

    <!-- Messages -->
    <string name="already_in_playlist">Трек уже добавлен в плейлист %1$s"</string>
    <string name="deletion_of_a_playlist_dialog_title">Хотите удалить плейлист %1$s?</string>
    <string name="deletion_of_a_track_dialog_title">Хотите удалить трек?</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="has_been_added_to_playlist">Добавлено в плейлист %1$s"</string>
    <string name="new_playlist_dialog_body">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_created_message">Плейлист, %1$s создан</string>
    <string name="playlist_creation">Плейлист, %1$s создан</string>
    <string name="playlist_creation_fail">Не удалось создать плейлист :("</string>
    <string name="playlist_edited_message">Плейлист, %1$s изменен</string>
    <string name="playlists_are_absent">Вы не создали\nни одного плейлиста.</string>
    <string name="tracks_is_not_available_to_share">В этом плейлисте нет списа треков,\n которыми можно поделиться.</string>
    <string name="without_tracks_playlist">В том плейлисте еще нет треков.</string>

    <!-- Playlist -->
    <string name="description">Описание</string>
    <string name="empty_playlist">Пустой плейлист</string>
    <string name="number_of_tracks">%1$d %2$s"</string>
    <string name="title">Название*</string>

    <!-- PlaylistDetails Menu -->
    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <!-- SearchFragment -->
    <string name="connection_failure">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету.</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить истоию</string>

    <!-- SettingFragment -->
    <string name="contact_support">Написать в поддержку</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_app_uri">https://practicum.yandex.ru/android-developer</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_uri">vcdyj4hu8@yandex.ru</string>
    <string name="user_agreement_uri">https://yandex.ru/legal/practicum_offer</string>

    <!-- Track details -->
    <string name="collection_name">Альбом</string>
    <string name="country">Страна</string>
    <string name="default_playback_progress">00:00</string>
    <string name="not_applicable">n/a</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="release_date">Год</string>
    <string name="track_time">Длительность</string>

    <string name="favorite_tracks">Избранные треки</string>
    <string name="library">Медиатека</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists">Плейлисты</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>

    <string name="track_item_template">%1$s. %2$s - %3$s (%4$s)</string>
</resources>