<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_root"
    style="@style/RootLinearLayout">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_library"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorPrimary"
        android:backgroundTint="?attr/colorPrimary"
        android:elevation="0dp"
        android:gravity="center"
        app:contentInsetStartWithNavigation="0dp"
        app:icon="?attr/colorSecondary"
        app:title="@string/settings"
        app:titleTextAppearance="?attr/textAppearanceSubtitle_Large"
        app:titleTextColor="?attr/colorSecondary" />

    <FrameLayout
        android:id="@+id/theme_list_item"
        style="@style/SettingsListContainer"
        android:layout_marginTop="24dp"
        android:paddingEnd="4dp">

        <TextView
            android:id="@+id/theme_text"
            style="@style/SettingsListText"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switcher"
            style="@style/SettingsListImage"
            android:thumb="@drawable/switch_thumb"
            app:thumbTint="@color/switch_thumb"
            app:trackTint="@color/switch_track"
            app:useMaterialThemeColors="false" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/share_list_item"
        style="@style/SettingsListContainer">

        <TextView
            android:id="@+id/share_text"
            style="@style/SettingsListText"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/share_image"
            style="@style/SettingsListImage"
            android:src="@drawable/ic_share_24" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/support_list_item"
        style="@style/SettingsListContainer">

        <TextView
            android:id="@+id/support_text"
            style="@style/SettingsListText"
            android:text="@string/contact_support" />

        <ImageView
            android:id="@+id/support_image"
            style="@style/SettingsListImage"
            android:src="@drawable/ic_support_24" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/agreement_list_item"
        style="@style/SettingsListContainer">

        <TextView
            android:id="@+id/agreement_text"
            style="@style/SettingsListText"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/agreement_image"
            style="@style/SettingsListImage"
            android:src="@drawable/ic_arrow_forward_24" />

    </FrameLayout>

</LinearLayout>