<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/destination_library">

    <fragment
        android:id="@+id/destination_search"
        android:name="com.victor_sml.playlistmaker.search.ui.view.SearchFragment"
        android:label="@string/search" />

    <fragment
        android:id="@+id/destination_library"
        android:name="com.victor_sml.playlistmaker.library.ui.view.LibraryFragment"
        android:label="@string/library">
        <action
            android:id="@+id/action_playlist_details"
            app:destination="@id/destination_playlist_details"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/destination_settings"
        android:name="com.victor_sml.playlistmaker.settings.ui.view.SettingFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/destination_player"
        android:name="com.victor_sml.playlistmaker.player.ui.view.PlayerFragment"
        android:label="" />

    <fragment
        android:id="@+id/destination_playlist_editor"
        android:name="com.victor_sml.playlistmaker.library.playlistEditor.ui.view.PlaylistEditorFragment"
        android:label="@string/new_playlist" />

    <fragment
        android:id="@+id/destination_playlist_details"
        android:name="com.victor_sml.playlistmaker.library.playlistDetails.ui.view.PlaylistDetailsFragment"
        android:label="">
        <argument
            android:name="playlistId"
            app:argType="integer" />
    </fragment>

    <action
        android:id="@+id/action_global_player"
        app:destination="@id/destination_player"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out" />

    <action
        android:id="@+id/action_global_playlist_editor"
        app:destination="@id/destination_playlist_editor"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/fade_out" />

</navigation>