<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tv_message"
        style="@style/DialogText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deletion_of_a_track_dialog_title"
        android:textAppearance="?attr/textAppearanceBody_ExtraLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_negative_button"
        style="@style/DialogTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="10dp"
        android:text="@string/decline"
        app:layout_constraintEnd_toStartOf="@+id/tv_positive_button"
        app:layout_constraintTop_toBottomOf="@+id/tv_message" />

    <TextView
        android:id="@+id/tv_positive_button"
        style="@style/DialogTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="10dp"
        android:text="@string/accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_negative_button" />

</androidx.constraintlayout.widget.ConstraintLayout>