<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/yp_white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/pt_root_ui_vf"
            android:text="@string/settings"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_list_height"
        android:layout_marginTop="24dp"
        android:paddingStart="@dimen/activity_layout_marginHorizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/pt_root_ui_vf"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_text_size"
            android:textStyle="bold" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_list_height"
        android:paddingHorizontal="@dimen/activity_layout_marginHorizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/pt_root_ui_vf"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_share" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_list_height"
        android:paddingStart="@dimen/activity_layout_marginHorizontal"
        android:paddingEnd="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/pt_root_ui_vf"
            android:text="@string/contact_support"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_support" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_list_height"
        android:paddingStart="@dimen/activity_layout_marginHorizontal"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/pt_root_ui_vf"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_text_size"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_arrow_forward" />

    </FrameLayout>

</LinearLayout>