<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_playlist_cover"
            android:layout_width="312dp"
            android:layout_height="312dp"
            android:layout_gravity="center"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/add_player_poster" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_playlist_title"
            style="@style/TextInputLayout"
            android:layout_width="328dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:hint="@string/title"
            android:theme="@style/ThemeOverlay.PlaylistMaker.InputEditText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_playlist_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:singleLine="true"
                android:textAppearance="?attr/textAppearanceBody_ExtraLarge" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_playlist_description"
            style="@style/TextInputLayout"
            android:layout_width="328dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:hint="@string/description"
            android:theme="@style/ThemeOverlay.PlaylistMaker.InputEditText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_playlist_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:singleLine="true"
                android:textAppearance="?attr/textAppearanceBody_ExtraLarge" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_new_playlist"
                style="@style/SmallButton"
                android:layout_width="326dp"
                android:layout_height="44dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/button_background"
                android:enabled="false"
                android:text="@string/create"
                app:cornerRadius="8dp" />
        </FrameLayout>

    </LinearLayout>

</ScrollView>