<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_playlist_editor"
        style="@style/Toolbar"
        android:background="?attr/colorPrimary"
        android:backgroundTint="?attr/colorPrimary" />

    <ScrollView
        android:id="@+id/sv_edit_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_playlist_cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="26dp"
                android:src="@drawable/add_playlist_poster"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_playlist_title"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="@dimen/container_paddingHorizontal"
                android:layout_marginTop="32dp"
                android:hint="@string/title"
                android:theme="@style/ThemeOverlay.PlaylistMaker.InputEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_playlist_cover">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_playlist_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="32"
                    android:padding="0dp"
                    android:singleLine="true"
                    android:textAppearance="?attr/textAppearanceBody_ExtraLarge" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_playlist_description"
                style="@style/TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="@dimen/container_paddingHorizontal"
                android:layout_marginTop="16dp"
                android:hint="@string/description"
                android:theme="@style/ThemeOverlay.PlaylistMaker.InputEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_playlist_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_playlist_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="32"
                    android:padding="0dp"
                    android:singleLine="true"
                    android:textAppearance="?attr/textAppearanceBody_ExtraLarge" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save_playlist"
                style="@style/SmallButton"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginHorizontal="@dimen/container_paddingHorizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/button_background"
                android:enabled="false"
                android:text="@string/create"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_playlist_description"
                app:layout_constraintVertical_bias="1" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_save_playlist"
                app:trackColor="@color/yp_blue"
                app:trackThickness="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>